--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
     <p>JoLe515</p>
     
     <!-- Buttons for additional links -->
-    <a href="https://jlmpixelgames.github.io/Homepage/mediatree/yt" target="_blank"><button>YouTube</button></a>
-    <a href="https://discord.gg/EdzzpWjUba" target="_blank"><button>Discord</button></a>
+    <a href="/mediatree/yt/" target="_blank"><button>YouTube</button></a>
+    <a href="mediatree/dc/" target="_blank"><button>Discord</button></a>
   </div>
 </body>
 
