--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <p>JoLe515</p>
     
     <!-- Buttons for additional links -->
-    <a href="/mediatree/yt/" target="_blank"><button>YouTube</button></a>
+    <a href="mediatree/yt/" target="_blank"><button>YouTube</button></a>
     <a href="mediatree/dc/" target="_blank"><button>Discord</button></a>
   </div>
 </body>
