--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <!-- Buttons for additional links -->
     <a href="mediatree/yt/" target="_blank"><button>YouTube</button></a>
     <a href="mediatree/dc/" target="_blank"><button>Discord</button></a>
-    <a href="mediatree/twitch/" target="_blank"><button>Discord</button></a>
+    <a href="mediatree/twitch/" target="_blank"><button>Twitch</button></a>
   </div>
 </body>
 
