--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
         <div class="socials">
             <div class="social-links">
                 <a href="https://discord.gg/EdzzpWjUba"><i class="fab fa-discord-f"><image src="dc.ico"></image></i></a>
-                <a href="https://tiktok.com/jole515x"><i class="fab fa-tiktok"><image src="tt.ico"></image></i></a>
+                <a href="https://www.tiktok.com/@jole515x"><i class="fab fa-tiktok"><image src="tt.ico"></image></i></a>
                 <a href="https://www.twitch.tv/jolex515"><i class="fab fa-twitch-in"><image src="ttv.ico"></image></i></a>
             </div>
         </div>
