--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
         </div>
         <button onclick="window.open('https://youtube.com/@jole515?sub_confirmation=1','_blank');">Abonnieren</button>
         <footer>
-            <h3>Made with ❤️ by <a href="https://github.com/blausteinstaub">Bengt</a></h3>
+            <h3>Made with ❤️ by <a href="https://github.com/illbreakurcode">Bengt</a></h3>
         </footer>
     </div>
 
