--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,7 +13,7 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            
+
         }
 
         header {
@@ -38,7 +39,8 @@
             text-align: center;
         }
 
-        h1, h2 {
+        h1,
+        h2 {
             margin: 0;
         }
 
@@ -134,21 +136,22 @@
             margin-left: auto;
         }
 
-        div > h1{
+        div>h1 {
             color: rgb(0, 159, 187);
         }
-        .fab > img{
+
+        .fab>img {
             width: 20px;
             height: 20px;
         }
 
         .fab {
             display: flex;
-            text-align:center;
+            text-align: center;
             align-items: center;
         }
 
-        footer{
+        footer {
             display: fixed !important;
             bottom: 0px;
             flex-direction: column;
@@ -166,6 +169,7 @@
         }
     </style>
 </head>
+
 <body ondragstart="return false;" ondrop="return false;">
     <header>
         <h1>JoLe</h1>
@@ -179,21 +183,29 @@
         <h2>Hallo, wir sinds</h2>
         <h1>Jonas & Levy</h1>
         <h2>Wir wollen einfach Spaß haben</h2>
-        <p><3</p>
-        <div class="hexagon">
-            <img src="pfp.jpg" alt="Profile Picture">
-        </div>
-        <div class="socials">
-            <div class="social-links">
-                <a href="https://discord.gg/EdzzpWjUba"><i class="fab fa-discord-f"><image src="dc.ico"></image></i></a>
-                <a href="https://www.tiktok.com/@jole515x"><i class="fab fa-tiktok"><image src="tt.ico"></image></i></a>
-                <a href="https://www.twitch.tv/jolex515"><i class="fab fa-twitch-in"><image src="ttv.ico"></image></i></a>
-            </div>
-        </div>
-        <button onclick="window.open('https://youtube.com/@jole515?sub_confirmation=1','_blank');">Abonnieren</button>
-        <footer>
-            <h3>Made with ❤️ by <a href="https://github.com/illbreakurcode">Bengt</a></h3>
-        </footer>
+        <p>
+            <3< /p>
+                <div class="hexagon">
+                    <img src="pfp.jpg" alt="Profile Picture">
+                </div>
+                <div class="socials">
+                    <div class="social-links">
+                        <a href="https://discord.gg/EdzzpWjUba"><i class="fab fa-discord-f">
+                                <image src="dc.ico"></image>
+                            </i></a>
+                        <a href="https://www.tiktok.com/@jole515x"><i class="fab fa-tiktok">
+                                <image src="tt.ico"></image>
+                            </i></a>
+                        <a href="https://www.twitch.tv/jolex515"><i class="fab fa-twitch-in">
+                                <image src="ttv.ico"></image>
+                            </i></a>
+                    </div>
+                </div>
+                <button
+                    onclick="window.open('https://youtube.com/@jole515?sub_confirmation=1','_blank');">Abonnieren</button>
+                <footer>
+                    <h3>Made with ❤️ by <a href="https://github.com/illbreakurcode">Bengt</a></h3>
+                </footer>
     </div>
 
 </body>
